--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
-button {
-  position: absolute;
-  top: 10px;
-  left: 10px;
+#boxes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.box {
+  width: 200px;
+  height: 200px;
+}
+h1 {
+  text-align: center;
 }
